# DiscordBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS.md
.github/workflows/: pytest.yml
domain/: Constants.py  CountryCode.py  Tools.py
games/: Game.py  GameHandler.py
games/FlagGuesser/: FlagGuesser.py  flagGuesser.py
games/FlagGuesser/asset/: codes.json  names_en.json  names_fr.json
infra/: FlagDAO.py  FlagRepository.py
infra/json_db/: codes.json  names_fr.json
test/infra/: test_FlagRepository.py
